--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-09-23 scizzo <scizzo@gimp.org>
 
+	* /resources/index.htrw: Commented out links that has no content.
+
+2003-09-23 scizzo <scizzo@gimp.org>
+
 	* /includes/wgo-page-init.xhtml
 	* wgo-howto-bugs-init.xhtml
 	* wgo-howto-source-init.xhtml
