--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-09-24  Raphael Quinet  <quinet@gamers.org>
 
+	* unix/index.htrw: Improved the description of links to the AIX
+	versions of the GIMP.  Added a link to a query for GIMP at
+	rpmfind.net.
+
 	* unix/.cvsignore: Regenerated.
 
 	* resources/index.htrw: Removed a stray --> (end of comment) that
