--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-11-24  Raphael Quinet  <quinet@gamers.org>
+
+	* includes/includes/wgo-admin-init.xhtml
+	* includes/wgo-develop-init.xhtml
+	* includes/wgo-howto-bugs-init.xhtml
+	* includes/wgo-howto-source-init.xhtml
+	* includes/wgo-howto-unix-init.xhtml
+	* includes/wgo-page-init.xhtml
+	* includes/wgo-tutorial-init.xhtml: added id="wwwgimporg" to the
+	body element in order to help those who would like to override
+	some of our styles in their personal style sheet (bug #127811).
+
 2003-10-27  Sven Neumann  <sven@gimp.org>
 
 	* books/index.htrw: removed trailing slash; fixes #125598.
