--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Henrik Brix Andersen  <brix@gimp.org>
+
+	* admin/gimp-web-urls: changed home:gimp-bugzilla-wgo-submit to
+	match new bugzilla product. Fixes part of bug #131580.
+
 2004-01-07  Raphaël Quinet  <quinet@gamers.org>
 
 	* style/wgo.css: Replaced "div.news img" by "p.news img" because
