--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-17  Niklas M <scizzo@gimp.org>
+
+	* admin/gimp-web-urls: Changed original links to the Photo Edit
+	tutorials provided by Eric Jeschke. Got a mail from him about this.
+
 2004-01-15  Henrik Brix Andersen  <brix@gimp.org>
 
 	* admin/gimp-web-urls: changed home:gimp-bugzilla-wgo-submit to
