--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-14  Niklas M <scizzo@gimp.org>
+
+	* screenshots/*.png: Added new screenshots from various people.
+	* screenshots/index.htrw: Changed layout and made previews in size
+	300x225.
+
 2004-03-14  Raphaël Quinet  <quinet@gamers.org>
 
 	* tutorials/Changing_Background_Color_2/index.htrw: Adapted the
