--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-14  Niklas M <scizzo@gimp.org>
+
+	* team.htrw: Removed me from being tutorial coordinator.
+
 2004-03-14  Raphaël Quinet  <quinet@gamers.org>
 
 	* tutorials/Anti-Aliased_Threshold/curves.png: New Curves dialog
