Minor changes. Updated the location of the Newsprint plug-in after Xach
2004-03-18  Raphael Quinet  <quinet@gamers.org>

	* tutorials/Quickmask/index.htrw: Minor changes.  Updated the
	location of the Newsprint plug-in after Xach asked if it was OK.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-18  Raphaël Quinet  <quinet@gamers.org>
+
+	* tutorials/Quickmask/index.htrw: Minor changes.  Updated the
+	location of the Newsprint plug-in after Xach asked if it was OK.
+
 2004-03-17  Raphaël Quinet  <quinet@gamers.org>
 
 	* tutorials/Straight_Line/exp2.png: As suggested by Seth, I re-did
