fixed typos in Lite_Quickies which prevented site from building; Remove
2004-03-20  Shawn T. Amundson <amundson@gimp.org>

        * includes/wgo-page-fini.xhtml
          tutorials/Lite_Quickies/jpegrace.htrw: fixed typos in Lite_Quickies
        which prevented site from building; Remove "Grokking the GIMP" link
        from bottom of website, since it is not GIMP 2.0-related and does
        also exist in Books section.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,23 @@
+
+2004-03-20  Shawn T. Amundson <amundson@gimp.org>
+
+	* includes/wgo-page-fini.xhtml
+	  tutorials/Lite_Quickies/jpegrace.htrw: fixed typos in Lite_Quickies
+	which prevented site from building; Remove "Grokking the GIMP" link
+	from bottom of website, since it is not GIMP 2.0-related and does
+	also exist in Books section.
+
 2004-03-18  Carol Spears <carol@gimp.org>
-    * fixed a typo in /unix/user_install.htrw
-    * updated images in /tutorials/Lite_Quickies
-    * added quintet_hst_big.jpg, crop-dialog.png, info-dialog.png
-    * added AS17-148-22727.jpg, AS17-148-22727_lrg.jpg, earth_1_apollo17_big.gif
-    * fixed xhtml /tutorials/Lite_Quickies/index.htrw,jpegrace.htrw,flips.htrw
-    * removed mode-alphano.png, mode-flatten-menu.png, mode-gifno.png, mode-jpegno.png,
-      mode-menu2.png, mode-sample.png, mode-sample2.png
+
+	* fixed a typo in /unix/user_install.htrw
+	* updated images in /tutorials/Lite_Quickies
+	* added quintet_hst_big.jpg, crop-dialog.png, info-dialog.png
+	* added AS17-148-22727.jpg, AS17-148-22727_lrg.jpg, 
+	  earth_1_apollo17_big.gif
+	* fixed xhtml /tutorials/Lite_Quickies/index.htrw,jpegrace.htrw,
+	  flips.htrw
+	* removed mode-alphano.png, mode-flatten-menu.png, mode-gifno.png, 
+	  mode-jpegno.png, mode-menu2.png, mode-sample.png, mode-sample2.png
 
 2004-03-18  Raphaël Quinet  <quinet@gamers.org>
 
