--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-21  Niklas M <scizzo@gimp.org>
+
+	* bugs/index.htrw: Made updates and rewrote the page a little to be
+	more flexible and to contain more information.
 
 2004-03-20  Shawn T. Amundson <amundson@gimp.org>
 
